<resources>
    <string name="app_name"></string>
    <string name="txt_maquillaje">MAQUILLAJE</string>
    <string name="txt_cliente">CLIENTES</string>
    <string name="txt_compra">COMPRAS</string>
    <string name="insertar">REGISTRAR</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="ver">VISUALIZAR</string>
    <string name="modificarEliminar">MODIFICAR O ELIMINAR</string>
    <string name="title_activity_menu_clientes">MENU CLIENTES</string>
    <string name="title_activity_menu_maquillaje">MENU CATÁLOGO</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="id_cliente">Id</string>
    <string name="apellido_cliente">Apellido</string>
    <string name="cedula_cliente">Cedula</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="codigo">CODIGO:</string>
    <string name="id_zapato">Id</string>
    <string name="nombre_producto">Existencias</string>
    <string name="marca_producto">Marca</string>
    <string name="color_producto">Color</string>
    <string name="tipo_producto">Tipo</string>
    <string name="cantidad_producto">Cantidad</string>
    <string name="precio_producto">Precio</string>
    <string name="datos_cliente">Registrar datos del Cliente</string>
    <string name="datos_producto">Registrar datos del producto</string>
    <string name="id_compra">Id</string>
    <string name="fecha_compra">Fecha</string>
    <string name="validez_compra">Validez</string>
    <string name="maquillaje_compra">Maquillaje</string>
    <string name="anular_compra">ANULAR</string>

</resources>
