<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" android:id="@+id/linear_layout_cli">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textStyle="italic"
            android:textAlignment="center"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/lay_cam_cli">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="30dp" android:id="@+id/text_id" android:layout_weight="1"
                    android:textColor="#F5E9E3E3" android:textStyle="bold|italic" android:text="@string/id_cliente"
                    android:textAlignment="textStart" android:textSize="20sp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="50dp"
                    android:layout_height="30dp" android:id="@+id/txt_id_cli" android:layout_weight="1"
                    android:textColor="@color/colorTextoCampos"
                    android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="30dp" android:id="@+id/text_nombre" android:layout_weight="1"
                    android:textColor="#F5E9E3E3" android:textStyle="bold|italic"
                    android:text="@string/nombre_cliente"
                    android:textAlignment="textStart" android:textSize="20dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="50dp"
                    android:layout_height="30dp" android:id="@+id/txt_nom_cli" android:layout_weight="1"
                    android:textColor="@color/colorTextoCampos"
                    android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/apellido_cliente"
                    android:layout_width="60dp"
                    android:layout_height="30dp" android:id="@+id/text_ape" android:layout_weight="1"
                    android:textColor="#F5E9E3E3" android:textStyle="bold|italic"
                    android:textAlignment="textStart" android:textSize="20dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="50dp"
                    android:layout_height="30dp" android:id="@+id/txt_ape_cli" android:layout_weight="1"
                    android:textColor="@color/colorTextoCampos"
                    android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/cedula_cliente"
                    android:layout_width="60dp"
                    android:layout_height="30dp" android:id="@+id/text_cedu" android:layout_weight="1"
                    android:textColor="#F5E9E3E3" android:textStyle="bold|italic"
                    android:textAlignment="textStart" android:textSize="20dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="50dp"
                    android:layout_height="30dp" android:id="@+id/txt_ced_cli" android:layout_weight="1"
                    android:textColor="@color/colorTextoCampos"
                    android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text" android:layout_weight="1"
                    android:textColor="@color/colorTextoCampos" android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
        <Button
                android:text="@string/btn_eliminar"
                android:layout_width="148dp"
                android:layout_height="30dp" android:id="@+id/btn_eli_cli"
                android:background="@drawable/round2" android:textColor="@color/colorTextoBotones"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>