<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modulo_compras.MenuCompras" android:background="@android:color/white">
    <ImageView
            android:layout_width="168dp"
            android:layout_height="98dp" app:srcCompat="@drawable/maquillaje"
            android:id="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="CATÁLOGO MAQUILLAJE"
            android:layout_width="283dp"
            android:layout_height="27dp"
            android:id="@+id/text_titulo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:textSize="24sp" android:textColor="#817C7C" android:textAlignment="center"
            android:textStyle="bold"/>


    <Button
            android:text="@string/ver"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ver_com"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_ing_com"
            android:textColor="#F5E9E3E3" android:background="@drawable/round"/>
    <Button
            android:text="@string/insertar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ing_com"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_mod_com"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/btn_ver_com"
            android:textColor="#F5E9E3E3" android:background="@drawable/round"/>
    <Button
            android:text="@string/modificarEliminar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_mod_com"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/btn_ing_com"
            android:textColor="#F5E9E3E3" android:background="@drawable/round"/>
    <Button
            android:text="Gestión Compras"
            android:layout_width="376dp"
            android:layout_height="66dp"
            android:id="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/text_titulo" android:background="@drawable/img1"
            android:textColor="@android:color/white" android:textSize="30sp" android:textAllCaps="true"
            android:textStyle="bold" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.019"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="165dp"
            android:layout_height="105dp" app:srcCompat="@drawable/carrito"
            android:id="@+id/imageView7"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ver_com"
            app:layout_constraintTop_toTopOf="@+id/btn_ver_com" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_ver_com" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="158dp"
            android:layout_height="112dp" app:srcCompat="@drawable/anadircaompra"
            android:id="@+id/imageView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_ing_com"
            app:layout_constraintTop_toTopOf="@+id/btn_ing_com"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ing_com"/>
    <ImageView
            android:layout_width="159dp"
            android:layout_height="97dp" app:srcCompat="@drawable/compeli"
            android:id="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/btn_mod_com"
            app:layout_constraintBottom_toBottomOf="@+id/btn_mod_com"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_mod_com" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.739"/>
</android.support.constraint.ConstraintLayout>